--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -96,7 +96,7 @@
             </div>
             <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <img src="/d.png" style="height: 150px; width: 150px;">
+                    <img src="/d.png" class="animated bounceInLeft" style="height: 150px; width: 150px;">
                 </a>
             </div>
             <div class="col-4 text-center ps-5 pt-5 pb-4">
