--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -26,7 +26,18 @@
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fa-regular fa-user"></i>
+                        </a>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" th:href="@{/login}">Accedi</a></li>
+                            <li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
+                        </ul>
+                    </div>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-light" th:classappend="${area == 'auto' ? 'active' : ''}"
@@ -100,6 +111,7 @@
                 </a>
             </div>
             <div class="col-4 text-center ps-5 pt-5 pb-4">
+
                 <i class="rounded text-light color1 fa fa-instagram"></i>
                 <i class="rounded fa fa-facebook"></i>
                 <i class="rounded fa fa-twitter"></i>
