--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -299,7 +299,7 @@
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
-                        class="text-warning"><strong>Online:</strong></h3>
+                        class="text-light"><strong>Online:</strong></h3>
                     <br>
                     <h5>AutoJaita Comunity:</h5>
                     <p>Benvenuti nella AutoJaita Comunity dove potrete esplorare il nostro mondo attraverso le
@@ -320,7 +320,7 @@
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
-                        class="text-warning"><strong>Telefono:</strong></h3>
+                        class="text-light"><strong>Telefono:</strong></h3>
                     <br>
                     <h6>Napoli: 0818233429 <br> Novara: 0108233429 <br> Milano: 0128233429 </h6>
                     <p>Per richiedere informazioni e supporto nelle nostre sedi</p>
@@ -334,14 +334,14 @@
                     <br>
                     <br>
                     <h3 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"
-                        class="text-warning"><strong>Social:</strong></h3>
+                        class="text-light"><strong>Social:</strong></h3>
                     <br>
                     <h5>Il nostro Instagram:</h5>
-                    <p class="fa text-warning">&#xf16d;</p><span>Auto-Jaita</span>
+                    <p class="fa text-secondary">&#xf16d;</p><span>Auto-Jaita</span>
                     <h5>Il nostro Facebook:</h5>
-                    <p class="fa text-warning">&#xf09a;</p><span>Concessionaria AutoJaita</span>
+                    <p class="fa text-secondary">&#xf09a;</p><span>Concessionaria AutoJaita</span>
                     <h5>Il nostro Twitter:</h5>
-                    <p class="fa text-warning">&#xf099;</p><span>Auto-Jaita</span>
+                    <p class="fa text-secondary">&#xf099;</p><span>Auto-Jaita</span>
                 </div>
             </div>
         </div>
