--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -29,20 +29,20 @@
             <div class="card border border-dark bg-secondary bg-opacity-10" style="width: 17rem; padding: 0px;">
                 <a th:href="@{/auto/show/{id}(id=${auto.id})}">
                     <img th:src="${auto.foto}" class="card-img border border-dark"
-                         style="height: 150px; transition: transform 0.3s;"
+                         style="height: 170px; transition: transform 0.3s;"
                          onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'"
                          alt="foto">
                 </a>
                 <div class="card-body text-center">
                     <h6 class="text-center text-light"><strong>AUTOJAITA</strong></h6>
-                    <h5 th:text="${auto.name}" class="card-title text-center color-amministrazione"></h5>
+                    <h5 th:text="${auto.name}" class="card-title text-center"></h5>
                     <p th:text="${auto.getFormattedPrice()} + €"
-                       class="fw-bold card-text text-center color-amministrazione"></p>
+                       class="fw-bold card-text text-center"></p>
                     <div class="d-grid gap-2">
                         <a th:href=@{/acquistoCliente/create/{id}(id=${auto.id})}
-                           class="rounded-3 btn btn-success btn-sm">Acquista</a>
+                           class="rounded-3 btn btn-light btn-sm">Acquista</a>
                         <a th:href="@{/auto/show/{id}(id=${auto.id})}"
-                           class=" rounded-3 btn btn-warning  text-dark btn-sm">Dettagli</a>
+                           class=" rounded-3 btn btn-secondary text-dark btn-sm">Dettagli</a>
                     </div>
                 </div>
             </div>
