--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -37,6 +37,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" th:href="@{/login}" th:if="${!username}">Accedi</a></li>
                             <li><a class="dropdown-item" th:href="@{/logout}" th:if="${username}">Logout</a></li>
+                            <li><a class="dropdown-item" th:href="@{/register}" th:if="${!username}">Registrati</a></li>
                         </ul>
                     </div>
                     <ul class="navbar-nav">
