aggiustate card in varie parti (dimensioni), logo e icone

--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -4,40 +4,43 @@
 <body class="bg-light">
 <header th:replace="fragments/resources :: header"></header>
 <main>
-    <div class="container w-50 mt-5 mb-5 pb-3">
-        <div class="card pb-4 bg-secondary bg-opacity-10">
-        <div class="row">
-            <div class="col-12 text-center">
-            <div class="col-12 text-center" style="padding: 0%">
-                <a th:href="@{/auto}">
-                    <img class="img-fluid shadow-lg" th:src="${acquistoCliente.getAuto().getFoto()}" style="transition: transform 0.3s; width: 100%; height: 400px;"
-                         onmouseover="this.style.transform='scale(1.030)'" onmouseout="this.style.transform='scale(1)'"
-                         alt="foto">
-                </a>
+    <div class="container-fluid mt-5 mb-5">
+        <div class="row" style="width: 100%">
+            <div class="col-4"></div>
+            <div class="col-4 text-center">
+                 <div class="card pb-3 bg-secondary bg-dark " style="width: 100%;">
+                     <div class="card-body p-0">
+                         <div class="text-center" style="padding: 0%">
+                             <a th:href="@{/auto}">
+                                 <img class="img-fluid shadow-lg card-img-top" th:src="${acquistoCliente.getAuto().getFoto()}" style="transition: transform 0.3s;"
+                                      onmouseover="this.style.transform='scale(1.030)'" onmouseout="this.style.transform='scale(1)'"
+                                      alt="foto">
+                             </a>
+                         </div>
+                         <div class="text-center">
+                             <h3 class="mt-2 card-title fw-bold text-warning" th:text="${acquistoCliente.getAuto().getName()}"></h3>
+                             <h5 class="fw-bold text-light" th:if="${acquistoCliente.getAuto().getAutoType() != null}" th:text="${acquistoCliente.getAuto().getAutoType().getName()}"></h5>
+                             <p class="text-center card-text text-light" th:text="${acquistoCliente.getAuto().getDescription()}"></p>
+                             <h5 class="text-light">Price: <span class="fw-bold text-warning" th:text="${acquistoCliente.getAuto().getFormattedPrice()} + €"></span></h5>
+                             <form th:action="@{/acquistoCliente/create}"
+                                   method="post" th:object="${acquistoCliente}">
+                                 <label for="quantita" class="form-label text-light">Quantità</label>
+                                 <input class="form-input border-light" type="number" id="quantita" th:field="*{quantita}" th:errorClass="is-invalid">
+                                 <div class="invalid-feedback" th:if="${#fields.hasErrors('quantita')}">
+                                     <ul>
+                                         <li th:each="err : ${#fields.errors('quantita')}" th:text="${err}"></li>
+                                     </ul>
+                                 </div>
+                                 <input type="hidden" th:field="*{data}">
+                                 <input type="hidden" th:field="*{auto}">
+                                 <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
+                                 <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-light btn-sm">Indietro</a></span></h5>
+                             </form>
+                         </div>
+                     </div>
+                </div>
             </div>
-            <div class="col-12 text-center">
-                <h3 class="mt-2 card-title fw-bold text-warning" th:text="${acquistoCliente.getAuto().getName()}"></h3>
-                <h5 class="fw-bold text-dark" th:if="${acquistoCliente.getAuto().getAutoType() != null}" th:text="${acquistoCliente.getAuto().getAutoType().getName()}"></h5>
-                <p class="text-center card-text text-dark" th:text="${acquistoCliente.getAuto().getDescription()}"></p>
-                <h5>Price: <span class="fw-bold text-warning" th:text="${acquistoCliente.getAuto().getFormattedPrice()} + €"></span></h5>
-                <form th:action="@{/acquistoCliente/create}"
-                method="post" th:object="${acquistoCliente}">
-                    <label for="quantita" class="form-label text-light">Quantità</label>
-                    <input class="form-input border-light" type="number" id="quantita" th:field="*{quantita}" th:errorClass="is-invalid">
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('quantita')}">
-                        <ul>
-                            <li th:each="err : ${#fields.errors('quantita')}" th:text="${err}"></li>
-                        </ul>
-                    </div>
-                    <input type="hidden" th:field="*{data}">
-                    <input type="hidden" th:field="*{auto}">
-                    <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
-                    <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-light btn-sm">Indietro</a></span></h5>
-                </form>
-
-            </div>
-        </div>
-        </div>
+            <div class="col-4"></div>
         </div>
     </div>
 </main>
