--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,8 +21,6 @@
               transparent 100%);
         }
 
-
-
         .bg-glass {
           background-color: hsla(0, 0%, 100%, 0.9) !important;
           backdrop-filter: saturate(200%) blur(25px);
@@ -33,8 +31,8 @@
         <div class="row gx-lg-5 align-items-center mb-5">
             <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
                 <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                    The best offer <br/>
-                    <span style="color: hsl(218, 81%, 75%)">for your business</span>
+                    AUTOJAITA <br/>
+                    <span style="color: hsl(218, 81%, 75%)">La concessionaria del futuro</span>
                 </h1>
                 <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -45,13 +43,10 @@
             </div>
 
             <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-                <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-                <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-
                 <div class="card bg-glass">
                     <div class="card-body px-4 py-5 px-md-5">
                         <form th:action="@{/login}" method="post">
-
+                            <p th:if="${loginError}" class="error">Username o Password errata</p>
                             <div class="form-group">
                                 <label for="username">Username</label>:
                                 <input type="text" id="username" name="username" autofocus="autofocus"
