--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .color-hf{
 color: #191970;
 }
@@ -17,31 +23,30 @@ background-color: #87CEEB;
 
 .fa {
   padding: 10px;
-  font-size: 30px;
+  font-size: 40px;
   width: 50px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
+  color: white;
 }
 
 .fa:hover {
-    opacity: 0.7;
+transition: 1.5s;
+transform: rotateY(380deg);
 }
 
-.fa-instagram {
-  background: #125688;
-  color: white;
+.fa-instagram:hover {
+color: #d62976;
+
 }
 
-
-.fa-facebook {
-  background: #3B5998;
-  color: white;
+.fa-facebook:hover {
+color: #3b5998;
 }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
+.fa-twitter:hover {
+color:	#1DA1F2;
 }
 
 main span.animated {
@@ -65,7 +70,7 @@ font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;
   --gradient: linear-gradient(90deg, #212529, #95F0F5)}
 
 body {
-  min-height: 100vh;
+  height: 100dvh;
   font-size: 1.125em;
   line-height: 1.6;
   color: #333;
@@ -74,9 +79,9 @@ body {
   background-image: var(--gradient);
   animation: bg-animation 25s infinite;
   margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 @keyframes bg-animation {
@@ -113,8 +118,16 @@ background-color: #FF00FF;
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 10px;
+ /* padding: 10px;
   position: fixed;
   bottom: 0;
   width: 100%;
+  */
+  .card-img {
+    display: block;
+    max-width:230px;
+    max-height:95px;
+    width: auto;
+    height: auto;
+  }
 }
