--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -7,6 +7,16 @@
 
 <body>
 <header th:replace="fragments/resources :: header"></header>
+<div class="container">
+    <!-- messaggio di success che viene mostrato solo dopo redirect -->
+    <div th:if="${redirectMessage != null}"
+         class="alert alert-success alert-dismissible fade show mt-4"
+         role="alert">
+        <div th:text="${redirectMessage}" class="text-center"></div>
+        <div class="text-center">Adesso non ti resta che fare il LOGIN :)</div>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
 <main class="span.animated">
     <div th:if="${message !=null}" aria-live="polite" aria-atomic="true"
          class="bg-body-secondary  bd-example-toasts rounded-3">
