--- a/src/main/resources/templates/user/registrati.html
+++ b/src/main/resources/templates/user/registrati.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="fragments/resources :: head('Register Page')"></head>
+<head th:replace="fragments/resources :: head('Login Page')"></head>
 <body>
 <!-- Section: Design Block -->
-<section class="background-radial-gradient overflow-hidden">
+<section class="background-radial-gradient overflow-hidden vh-100 pt-5 my-auto vertical-center">
     <style>
         .background-radial-gradient {
           background-color: hsl(218, 41%, 15%);
@@ -21,33 +21,39 @@
               transparent 100%);
         }
 
-
-
         .bg-glass {
           background-color: hsla(0, 0%, 100%, 0.9) !important;
           backdrop-filter: saturate(200%) blur(25px);
         }
+        .vertical-center {
+          min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+          min-height: 100vh; /* These two lines are counted as one :-)       */
+
+          display: flex;
+          align-items: center;
+        }
+
+        .auto-blue {
+        padding-left: 100px;
+        }
     </style>
 
-    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5 ">
         <div class="row gx-lg-5 align-items-center mb-5">
             <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
                 <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                    The best offer <br/>
-                    <span style="color: hsl(218, 81%, 75%)">for your business</span>
+                    AUTOJAITA <br/>
+                    <span style="color: hsl(218, 81%, 75%)">La concessionaria del futuro</span>
                 </h1>
-                <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Temporibus, expedita iusto veniam atque, magni tempora mollitia
-                    dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-                    ab ipsum nisi dolorem modi. Quos?
+                <p class="m-0 opacity-70" style="color: hsl(218, 81%, 85%)">
+                    Benvenuto nella pagina di accesso alla nostra concessionaria. Qui puoi effettuare l'accesso per
+                    visualizzare le informazioni sui veicoli disponibili, prenotare un test drive, visualizzare le
+                    promozioni in corso, acquistare i tuoi veicoli e gestire le tue transazioni.
                 </p>
+                <img src="/auto_blu_laterale_con_ombra.png" style="height: 230px" class="auto-blue">
             </div>
 
             <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
-                <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
-                <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
-
                 <div class="card bg-glass">
                     <div class="card-body px-4 py-5 px-md-5">
                         <h1 class="text-center">Registrati</h1>
