--- a/src/main/resources/templates/user/registrati.html
+++ b/src/main/resources/templates/user/registrati.html
@@ -89,7 +89,7 @@
                             </div>
 
                             <!-- Submit button -->
-                            <div class="justify-content-center">
+                            <div class="justify-content-center text-center">
                             <button type="submit" value="Log in" class="btn btn-primary btn-block mb-4">
                                 Registrati
                             </button>
