--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -5,6 +5,12 @@
 <header th:replace="fragments/resources :: header"></header>
 <main>
     <div class="container-fluid mt-5 mb-5">
+        <div class="font-fre text-center text-light pb-3">
+            <h1>- Area Acquisto -</h1>
+            <h6><strong>- “Dalla gente che frequenti puoi capire chi sei e se serve una macchina per farmi capire chi ho di fronte, è un prezzo che sono disposto a pagare.” -</strong></h6>
+            <p><strong>L. Hamilton</strong><p>
+            <hr>
+        </div>
         <div class="row" style="width: 100%">
             <div class="col-4"></div>
             <div class="col-4 text-center">
