--- a/src/main/resources/templates/automobili/show.html
+++ b/src/main/resources/templates/automobili/show.html
@@ -5,7 +5,12 @@
 <header th:replace="fragments/resources :: header"></header>
 <main>
     <div class="container mt-5 mb-5">
-        <div class="card bg-secondary bg-opacity-10">
+        <div style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;" class="text-light text-center pb-4">
+        <h1><strong>- Dettagli auto -</strong></h1>
+        <h6><strong>- Piccoli dettagli che risultano impercettibili decidono tutto! -</strong></h6>
+            <p><strong>D.W. Sebald</strong></p>
+        </div>
+            <div class="card bg-secondary bg-opacity-10">
             <div class="row no-gutters">
                 <div class="col-4">
                     <a th:href="@{/auto}">
